@@ -47,6 +47,14 @@ namespace bt
 	 * @throw Error upon error
 	 */
 	KTORRENT_EXPORT void MakePath(const QString & dir,bool nothrow = false);
+	
+	/**
+	 * Creates the path of a file. 
+	 * @param file The full path of the file
+	 * @param nothrow whether or not we shouldn't throw an Error upon failure
+	 * @throw Error upon error
+	 */
+	KTORRENT_EXPORT void MakeFilePath(const QString & file,bool nothrow = false);
 
 	/**
 	* Create a symbolic link @a link_url which links to @a link_to 
